kubernetes/base/localstack/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: localstack
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: localstack
  template:
    metadata:
      labels:
        app: localstack
    spec:
      containers:
        - name: localstack
          image: localstack/localstack:latest
          ports:
            - containerPort: 4566
          volumeMounts:
            # 1. Монтування PVC для даних
            - name: localstack-data
              mountPath: /var/lib/localstack
            # 2. Монтування безпосередньо файлу init-aws.sh у папку ready.d
            - name: init-scripts
              mountPath: /etc/localstack/init/ready.d/init-aws.sh
              subPath: init-aws.sh
      volumes:
        # 1. Ваше PVC
        - name: localstack-data
          persistentVolumeClaim:
            claimName: localstack-pvc
        # 2. ConfigMap з ініціалізаційним скриптом
        - name: init-scripts
          configMap:
            name: localstack-init-script
            defaultMode: 0755
