kubernetes/base/localstack/irsa-shell-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: irsa-shell
  namespace: default
spec:
  serviceAccountName: irsa-sa
  restartPolicy: Never

  containers:
    - name: awscli
      image: amazon/aws-cli:2.13.38
      command: ["/bin/sh", "-lc"]
      args:
        - |
          echo "IRSA shell pod started. Sleeping..."
          sleep 36000
      volumeMounts:
        - name: web-identity-token
          mountPath: /var/run/secrets/eks.amazonaws.com/serviceaccount
          readOnly: true

  volumes:
    - name: web-identity-token
      secret:
        secretName: irsa-web-identity-token
        items:
          - key: token
            path: token
